deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubedoom
  name: kubedoom
  namespace: kubedoom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedoom
  template:
    metadata:
      labels:
        app: kubedoom
    spec:
      hostNetwork: true
      serviceAccountName: kubedoom
      containers:
        - image: storaxdev/kubedoom:0.5.0 
          name: kubedoom
          ports:
            - containerPort: 5900
              protocol: TCP
              name: vnc
