service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-statefulset
#  namespace: default
  labels:
    app: prometheus
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30020
    name: prometheus
    protocol: TCP
  selector:
    app: prometheus
